# semantic_search_v2

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
src/multi_scholar_search/: config.py  main.py
src/multi_scholar_search/models/: article.py  arxiv.py  base.py  connected_papers.py  google_scholar.py  ieee.py  semantic_scholar.py  springer.py
src/multi_scholar_search/sources/: arxiv.py  connected_papers.py  google_scholar.py  ieee.py  scopus.py  semantic_scholar.py  springer.py
src/multi_scholar_search/utils/: browser_client.py  dedup.py  doi_enricher.py  recaptcha_solver.py  storage.py  user_agents.py
tests/: test_arxiv.py  test_config.py  test_connected_papers.py  test_doi_enricher.py  test_google_scholar_pagination.py  test_google_scholar_parser.py  test_ieee.py  test_models.py  test_recaptcha_solver.py  test_semantic_scholar.py  test_springer.py  test_storage.py  test_user_agents.py
tests/fixtures/: google_scholar_sample.html
